--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* General Reset */
 * {
   margin: 0;
-  padding: 0;
+  padding: 1rem;
   box-sizing: border-box;
   font-family: 'Courier New', monospace;
 }
