--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   color: #ffffff;
   display: flex;
   flex-direction: column;
-  padding: 0.8rem;
+/*   padding: 0.8rem; */
   align-items: center;
   font-size: 1.2rem;
 }
