--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,9 @@ body {
   width: 100vw;
   padding: 15px 40px;
   position: fixed;
-  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar a {
